--- a/main.html
+++ b/main.html
@@ -7,11 +7,10 @@
 </head>
 
 <body>
-	<h1>History</h1>
+	 <h1>History</h1>
     <p><b>Main articles:</b>
-        History of bloging and online dairy
-    </p>
-    <p>An early example of a "diary" style blog consisting of text and images transmitted wirelessly in real-time 
+        History of bloging and online dairy<br><br>
+        An early example of a "diary" style blog consisting of text and images transmitted wirelessly in real-time 
         from a wearable computer with head-up display, February 22, 1995. The term "weblog" was coined by Jorn 
         Barger[13] on December 17, 1997. The short form, "blog", was coined by Peter Merholz, who jokingly broke 
         the word weblog into the phrase we blog in the sidebar of his blog Peterme.com in April or May 1999. Shortly 
